front : login, register, dashboard info
